# ProjectRad

./: README.md  pyproject.toml  requirements.txt
projectrad/: __init__.py
projectrad/db/: __init__.py
projectrad/views/: __init__.py
projectrad/views/loja/: __init__.py
projectrad/views/templates/: base.html  index.html  replacer.html
