[tool.poetry]
name = "projectrad"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
pytest = "^8.1.1"
flask-wtf = "^1.2.1"
wtforms = {extras = ["email"], version = "^3.1.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testspaths = ["tests",]